--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -20,6 +20,8 @@ $breakpoint-desktop: 1024px;
 * {
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
+    background-color: #171717;
+    color: #F9F9F9;
 }
 
 button,
@@ -45,16 +47,47 @@ nav {
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    padding: 0 50px;
+    padding: 0 70px;
     width: 100%;
     z-index: 5;
     height: 80px;
-    background-color: $nav-color;
     transition: 0.3s;
-    img {
-        width: 50px;
-        height: 50px;
-        border-radius: 100%;
+}
+
+.content {
+    text-align: center;
+    margin: 20px 0 50px;
+    h1 {
+        font-size: 55px;
+        width: 50%;
+        line-height: 1.5;
+        margin: 30px auto;
+        font-weight: bold;
+        max-width: 670px;
+        background: -webkit-linear-gradient(#fff, #eabce7);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    p {
+        width: 30%;
+        opacity: 60%;
+        line-height: 1.5;
+        margin: 20px auto;
+    }
+    button {
+        padding: 10px 50px;
+        margin: 30px 20px;
+        border-radius: 20px;
+        border: none;
+        background-color: #0071e2;
+    }
+    .blog-btn {
+        padding: 10px 50px;
+        margin: 30px 20px;
+        border-radius: 20px;
+        border: none;
+        background-color: #171717;
+        border: 2px solid #0071e2;
     }
 }
 
@@ -237,17 +270,31 @@ nav.visible {
     translate: 0;
 }
 
+.main-logo {
+    text-decoration: none;
+    margin-right: 50px;
+    font-size: 28px;
+    font-weight: bold;
+    background: -webkit-linear-gradient(#518eca, #e459d8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    cursor: pointer;
+}
+
 .nav-items {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 20px;
     a {
         text-decoration: none;
         color: $text-color;
         display: grid;
         place-content: center;
-         :hover {
-            color: #5a57b3;
+        &:hover {
+            color: #fff;
+            text-decoration: underline;
+            transition: 0.3s;
+            text-underline-offset: 5px;
         }
     }
     @media (max-width: 768px) {
